examples/valid/entrada_saida_bool.mc
int valor;
bool positivo;

print("digite um inteiro:");
scan(valor);
positivo = valor > 0;
print(positivo);
