examples/invalid/leitura_invalida.mc
int valor;

scan(5);
